サイネージのレイアウト調整

--- a/townboard-signage/index.html
+++ b/townboard-signage/index.html
@@ -104,8 +104,8 @@
                 </div>
             </div>
             <div class="feature-notes">
-                ※「お台場レインボー花火2025」は19:00より約5分間の開催です。<br><br>
-                ※荒天により中止する場合がございます。<br>&nbsp;&nbsp;&nbsp;詳細はクルーズ予約サイトにてご確認ください。
+                ※「お台場レインボー花火2025」は19:00より約5分間の開催です。<br>
+                ※荒天により中止する場合がございます。<br><br>&nbsp;&nbsp;&nbsp;詳細はクルーズ予約サイトにてご確認ください。
             </div>
         </div>
     </section>
