--- a/townboard-signage/index.html
+++ b/townboard-signage/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="side-movie-container">
             <video autoplay loop muted playsinline>
-                <source src="./assets/Beercruise.mp4" type="video/mp4">
+                <source src="./assets/tokyobaycruise2.mp4" type="video/mp4">
             </video>
         </div>
     </section>
