--- a/townboard-signage/index.html
+++ b/townboard-signage/index.html
@@ -205,7 +205,7 @@ async function updateMessageAndTemp() {
 updateClockAndTemp();
 updateMessageAndTemp();
 setInterval(updateClockAndTemp, 1000);
-setInterval(updateMessageAndTemp, 600000); // 10分間隔に変更
+setInterval(updateMessageAndTemp, 30000); // 30秒間隔に変更
 
 async function updateSeatStatus() {
     console.log('Updating seat status...');
