style: 各セクションのレイアウトを調整

--- a/townboard-signage/index.html
+++ b/townboard-signage/index.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
 
-            <div class="bottom-info-row">
+            <div class="bottom-info-row" style="transform: translateY(-40px);">
                 <div class="features-grid">
                     <div class="feature-card">
                         <img src="./assets/hanabi.png" class="feature-icon" alt="花火">
@@ -103,14 +103,14 @@
                     </div>
                 </div>
             </div>
-            <div class="feature-notes">
+            <div class="feature-notes" style="transform: translateY(-40px);">
                 ※「お台場レインボー花火2025」は19:00より約5分間の開催です。<br>
                 ※荒天により中止する場合がございます。<br><br>&nbsp;&nbsp;&nbsp;詳細はクルーズ予約サイトにてご確認ください。
             </div>
         </div>
     </section>
 
-    <section class="recommendation-section">
+    <section class="recommendation-section" style="transform: translateY(-80px);">
         <div class="rec-header-area">
             <h2 class="rec-main-title">その他おすすめコンテンツ</h2>
             <div class="line-wrapper">
@@ -149,7 +149,7 @@
         </div>
     </section>
     
-    <footer class="main-footer">
+    <footer class="main-footer" style="transform: translateY(-60px);">
         <div class="footer-text">
             <p>このメッセージは、クルーズポータルサイトを運営する horai が提供する自動生成システムによって作成されています。<br>
             当日の天候や空き状況に応じて、最新のクルーズ情報をお届けします。</p>
